# MoneyApp

./: .gitignore  AGENTS.md  CLAUDE.md
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  auth.py  category_rules.py  config.py  db.py  errors.py  logging_utils.py  main.py  merchants.py  middleware.py  models.py  money.py  seed_data.py
backend/app/routers/: categories.py  health.py  home.py  merchants.py  monthly_goals.py  recurring.py  transactions.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_seed_categories.py  0003_seed_dev_user.py  0004_monthly_goals.py  0005_monthly_goals_types_scopes.py
backend/tests/: conftest.py  test_alias_exact_suggestions.py  test_app_boot.py  test_auth_categories.py  test_categorize.py  test_constraints.py  test_delete_transaction.py  test_get_transaction.py  test_home.py  test_list_transactions.py  test_merchant_aliases.py  test_merchant_suggestions.py  test_migrations.py  test_monthly_goals.py  test_patch_transaction.py  test_quick_add.py  test_quick_add_category.py  test_quick_add_merchant.py  test_recent_merchants.py  test_recurring_templates.py  test_rule_suggestions.py  test_seed_categories.py
docs/: API_CONTRACT_V0_0_1.md  CATEGORY_TAXONOMY.md  DATABASE_SCHEMA_V0_0_1.md  IMPORT_PIPELINE_SPEC.md  IMPORT_SPEC_BANK_STATEMENT_HEBREW_V1.md  MANUAL_FIRST_MVP_REVISION.md  MERCHANT_NORMALIZATION_SPEC.md  MOBILE_UI_UX_SPEC.md  MVP_EXECUTION_ALIGNMENT.md  PRD_V0_1.md  PROJECT_PLAN.md  (+4 more)
(+47 files in other folders)
